--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ arboard = { version="3.6.0" }
 iced_fontello = "0.13"
 
 [patch.crates-io]
-iced = { git = "https://github.com/iced-rs/iced", rev = "283d0e74a8050ea625da25e0b9180b65f11d1843" }
+iced = { git = "https://github.com/iced-rs/iced", branch = "master" }
