--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ iced = { version = "0.14.0-dev", features = [
     "canvas",
 ] }
 arboard = { version="3.6.0" }
+widgets = { git = "https://github.com/A-Disruption/widgets.git"}
+
 
 [build-dependencies]
 iced_fontello = "0.13"
