Added a few more widgets, combo_box fully supported, standardized controls.rs for formatting.
fixed issue with overlays spawning out of viewport bounds.

Added custom enums with uuid for tracking.

More changes I can't recall :D

--- a/fonts/fonts.toml
+++ b/fonts/fonts.toml
@@ -13,3 +13,7 @@ copy = "fontawesome-docs"
 code = "fontawesome-file-code"
 theme = "typicons-brush"
 preview = "fontawesome-picture"
+type_icon = "fontawesome-building"
+expanded = "entypo-down-dir"
+collapsed = "entypo-right-dir"
+save = "fontawesome-floppy"
