--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,18 @@ iced = { version = "0.14.0-dev", features = [
     "debug",
     "canvas",
     "image",
-    "svg"
+    "svg",
+    "markdown",
+    "qr_code",
 ] }
 iced_runtime = { version = "0.14.0-dev" }
 arboard = { version="3.6.0" }
 widgets = { git = "https://github.com/A-Disruption/widgets.git"}
-
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+toml = { version = "0.9.7" }
+rfd = { version = "*" }
+uuid = { version = "1.6", features = ["v4", "serde"] }
 
 [build-dependencies]
 iced_fontello = "0.13"
