more complete widgets, button, text_input, mouse_area

--- a/fonts/fonts.toml
+++ b/fonts/fonts.toml
@@ -17,3 +17,4 @@ type_icon = "fontawesome-building"
 expanded = "entypo-down-dir"
 collapsed = "entypo-right-dir"
 save = "fontawesome-floppy"
+info = "fontawesome-info-circled"
